static/styles/rewards/gift-cards.css
.card-heading {
  font-size: 16px;
  text-align: center;
  position: absolute;
  margin-top: -30px;
  display: flex;
  align-items: center;
}

#gift-cards {
  padding-top: 44px;
  display: flex;
  flex-direction: column;
  max-width: 563px;
  width: 100vw;
  align-items: center;
  row-gap: 12px;
  position: relative;
}

.card-section {
  overflow-wrap: break-word;
  text-transform: none;
  background-color: var(--background-color-default);
  padding: 24px;
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  box-shadow: inset 0 0 96px #00bfff10;
}

.card-error {
  text-align: center;
  padding: 0 12px;
}

#offered-card {
  display: flex;
}

@media screen and (max-width: 640px) {
  .card-section {
    flex-direction: column;
    text-align: center;
  }
  .card-section .details {
    margin-left: 0;
  }
}

#redeem-code p {
  text-transform: none;
  margin: 2px 0;
}

.card-section h3 {
  padding: 8px;
  text-align: center;
}

.card-section .details {
  display: flex;
  flex-direction: column;
  margin-left: 24px;
  row-gap: 12px;
  flex: 1;
}

.card-section img {
  box-sizing: border-box;
  width: 100%;
  height: auto;
  border: 2px solid var(--border-color);
  max-width: 200px;
}

.card-section .pricing {
  display: flex;
  flex-direction: column;
}
.card-section .pricing .available {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}
.card-section .pricing .available div .currency {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.card-section .pricing .available div .currency div {
  font-size: 8px;
}
.card-section .pricing .available div .amount {
  font-size: 24px;
  color: #fff;
}
.redeem-info {
  width: 100%;
}
.redeem-info fieldset {
  min-width: 0;
}
.redeem-info fieldset a {
  overflow-wrap: break-word;
}
.redeem-info p {
  text-transform: none;
}
.redeem-info fieldset legend {
  text-align: center;
  padding: 0 4px;
}
.redeem-info fieldset .instructions {
  padding: 12px;
}

.redeem-info fieldset .instructions p#verbose.hidden {
  display: none;
}

.btn[data-loading="true"] > .icon {
  display: none;
}
.btn[data-loading="true"] > .action {
  display: none;
}
.btn[data-loading="true"] > .loader {
  display: block;
}
.btn[data-loading="true"] > .loader svg {
  animation: rotate 1s linear infinite;
}
.btn[data-loading="false"] > .icon {
  display: block;
}
.btn[data-loading="false"]:hover > .icon {
  display: none;
}
.btn[data-loading="false"] > .action {
  display: none;
}
.btn[data-loading="false"]:hover > .action {
  display: block;
}
.btn[data-loading="false"] > .loader {
  display: none;
}

.btn {
  width: 100%;
  border: none;
  color: #808080;
  cursor: pointer;
  height: 48px;
  background: 0 0;
}

.btn:hover {
  cursor: pointer;
  background-color: #80808020;
  color: #fff;
}

.cards-env {
  background: yellow;
  position: fixed;
  bottom: 0;
  width: 100%;
  padding: 4px;
  color: #000;
}

.disclaimer {
  text-align: center;
  padding: 24px 12px;
}

@media (prefers-color-scheme: light) {
  .card-section {
    background-color: #fff;
    box-shadow: inset 0 0 96px #00000008;
  }
  .card-section img {
    border-color: var(--light-mode-border-color);
  }
  .card-section .pricing .available div .amount {
    color: #000;
  }
  .btn:hover {
    color: #000;
  }
  .btn .icon {
    opacity: 0.5;
  }
}

